--- a/client/pom.xml
+++ b/client/pom.xml
@@ -35,6 +35,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.5.4</version>
+        </dependency>
     </dependencies>
 
     <build>
