--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.syncninja</groupId>
-        <artifactId>SyncNinjaMaven</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
+    <groupId>org.syncninja</groupId>
     <artifactId>syncninja</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
